--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   },
   "scripts": {
